css/main.css
@font-face {
  font-family: 'Avenir';
  src: url('fonts/Avenir.otf');
}

html {
  font-family: 'Avenir';
}

body {
  background-color: #111111;
}

html, body {
  height: 100%;
}

canvas {
  display: block;
  position: absolute;
  z-index: 0;
  background-color: #111111;
}

#particles-js {
}

.overlay {
  position: relative;
  height: 100%;
}

.body-header {
  color: white;
  font-size: 48pt;
  font-family: 'Roboto', sans-serif;
  text-align: center;
  padding-top: 75px;
}

.body-subheader {
  color: white;
  font-size: 24pt;
  font-family: 'Source Sans Pro', sans-serif;
  font-weight: 200;
  text-align: center;
}

.body-paragraph {
  color: white;
  font-size: 14pt;
  font-family: 'Source Sans Pro', sans-serif;
  font-weight: 300;
  text-align: center;
}

.social-links {
  text-align: center;
}

.social-links ul {
  padding: 0px 0px 0px 0px;
  display: block;
  text-align: center;
}

.social-links li {
  display: inline-block;
  cursor: pointer;
  margin-right: 10px;
}

.social-links a {
  display: block;
  color: #777777;
  -o-transition:.3s;
  -ms-transition:.3s;
  -moz-transition:.3s;
  -webkit-transition:.3s;
}

.social-links a:hover {
  color: white;
}

.nav-main {
  height: 100px;
	text-align: center;
  white-space: nowrap;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width: 800px) {
  .nav-main {
    height: 100px;
    text-align: center;
    white-space: nowrap;
  }

  .nav-main ul {
    width: 250px;
  }
}

.nav-main ul {
  width: 500px;
  display: block;
  border-top: 1px solid white;
  text-align: center;
  padding: 0px 0px 0px 0px;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
}

.nav-main li {
  display:inline-block;
  margin-right: 10px;
  margin-left: 10px;
  cursor: pointer;
}

.nav-main a {
  display: block;
  color: white;
  text-transform: uppercase;
  padding-top: 8px;
  border-top: 3px solid transparent;
  -o-transition:.5s;
  -ms-transition:.5s;
  -moz-transition:.5s;
  -webkit-transition:.5s;
}

.nav-main a:hover {
  border-top: 3px solid white;
  text-decoration: none;
}

.nav-fixed {
  opacity: 0;
  display: block;
  position: fixed;
  height: 100px;
  top: 25px;
  right: 25px;
  text-align: center;
  white-space: nowrap;
  z-index: 1;
}

.nav-fixed ul {
  width: 300px;
  display: block;
  border-bottom: 1px solid white;
  text-align: center;
  padding: 0px 0px 0px 0px;
}

.nav-fixed li {
  display: inline-block;
  margin-right: 5px;
  margin-left: 5px;
  cursor: pointer;
}

.nav-fixed a {
  display: block;
  color: white;
  text-transform: uppercase;
  padding-bottom: 5px;
  border-bottom: 3px solid transparent;
  -o-transition:.5s;
  -ms-transition:.5s;
  -moz-transition:.5s;
  -webkit-transition:.5s;
}

.nav-fixed a:hover {
  border-bottom: 3px solid white;
  text-decoration: none;
}

#about {
  position: relative;
}

#projects {
  position: relative;
  height: 100%;
  padding-top: 75px;
}

.top-buffer {
  padding-top: 30px;
}

.row.row-grid [class*="col-"] {
  margin-top: 25px;
}

.project-image {
  opacity: 1;
  -webkit-transition: .3s ease-in-out;
  transition: .3s ease-in-out;
}

.image-hover a img {
  opacity: 1;
  -webkit-transition: .3s ease-in-out;
  transition: .3s ease-in-out;
}

.image-hover a:hover img {
  opacity: .5;
}

#contact {
  position: relative;
}

#footer {
  position: relative;
  bottom: 0px;
  width: 100%;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

